--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.groceryapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GroceryApp">
-        <activity android:name=".EmailVerification"/>
+        android:theme="@style/Theme.GroceryApp.NoActionBar">
+        <activity android:name=".AccountDetails"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".EmailVerification" />
         <activity android:name=".SignUp" />
         <activity android:name=".LogIn" />
         <activity android:name=".MainActivity">
