--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.groceryapp"
-        minSdkVersion defaultMinSdkVersion
+        minSdkVersion defaultMinSdkVersion1
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
