--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryApp.NoActionBar">
-        <activity android:name=".VerifyPassword"></activity>
+        <activity android:name=".ResetPasswordChannel"></activity>
+        <activity android:name=".ResetPassword" />
+        <activity android:name=".VerifyPassword" />
         <activity android:name=".AccountDetails" />
         <activity android:name=".Settings" />
         <activity android:name=".EmailVerification" />
