--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryApp.NoActionBar">
-        <activity android:name=".ResetPasswordChannel"></activity>
+        <activity android:name=".LandingPage"></activity>
+        <activity android:name=".ResetPasswordChannel" />
         <activity android:name=".ResetPassword" />
         <activity android:name=".VerifyPassword" />
         <activity android:name=".AccountDetails" />
